--- a/index.html
+++ b/index.html
@@ -5,5 +5,14 @@
 </head>
 <body>
   <h1>a</h1>
+  <script>
+    Name = prompt("What is your name:");
+    alert('Welcome, ' + Name)
+  </script>
+  <video width="400" controls>
+    <source src="Big_Buck_Bunny.mp4" type="video/mp4">
+    Your browser does not support HTML video.
+  </video>
+  
 </body>
 </html>
