--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 <head>
   <title>a</title>
+  <style>
+    body {
+        background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='50px' width='40px'><text x='0' y='50' fill='black' font-size='100'>a</text></svg>");
+    }
+  </style>
 </head>
 <body>
-  <h1>a</h1>
   <script>
     Name = prompt("What is your name:");
     alert('Welcome, ' + Name)
