--- a/index.html
+++ b/index.html
@@ -1,22 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>a</title>
+  <title>Robux</title>
   <style>
-    body {
-        background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='50px' width='40px'><text x='0' y='50' fill='black' font-size='100'>a</text></svg>");
-    }
   </style>
 </head>
 <body>
-  <script>
-    Name = prompt("What is your name:");
-    alert('Welcome, ' + Name)
-  </script>
-  <video width="400" controls>
-    <source src="Big_Buck_Bunny.mp4" type="video/mp4">
-    Your browser does not support HTML video.
-  </video>
-  
 </body>
 </html>
